data persistance for assignment and course

--- a/MainActivity/res/layout/add_course.xml
+++ b/MainActivity/res/layout/add_course.xml
@@ -2,7 +2,7 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
+
     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="wrap_content"
@@ -27,7 +27,6 @@
 
             <requestFocus />
         </EditText>
-
     </TableRow>
 
     <TableRow
@@ -50,56 +49,62 @@
             android:id="@+id/etLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"/>
-
+            android:ems="10" />
     </TableRow>
 
-<!--     <TableRow -->
-<!--         android:id="@+id/tableRow3" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:paddingBottom="10dp" -->
-<!--         android:paddingLeft="10dp" -->
-<!--         android:paddingRight="20dp" -->
-<!--         android:paddingTop="20dp" > -->
-        
-<!--          <TextView -->
-<!--             android:id="@+id/tvStartDate" -->
-<!--             android:layout_width="wrap_content" -->
-<!--             android:layout_height="wrap_content" -->
-<!--             android:paddingRight="30dp" -->
-<!--             android:text="Start Date" /> -->
+    <!-- <TableRow -->
+    <!-- android:id="@+id/tableRow3" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:paddingBottom="10dp" -->
+    <!-- android:paddingLeft="10dp" -->
+    <!-- android:paddingRight="20dp" -->
+    <!-- android:paddingTop="20dp" > -->
 
-<!--         <DatePicker -->
-<!--             android:id="@+id/dpStartDate" -->
-<!--             android:layout_width="wrap_content" -->
-<!--             android:layout_height="wrap_content" /> -->
 
-<!--     </TableRow> -->
-    
-<!--      <TableRow -->
-<!--         android:id="@+id/tableRow4" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:paddingBottom="10dp" -->
-<!--         android:paddingLeft="10dp" -->
-<!--         android:paddingRight="20dp" -->
-<!--         android:paddingTop="20dp" > -->
-        
-<!--          <TextView -->
-<!--             android:id="@+id/tvEndDate" -->
-<!--             android:layout_width="wrap_content" -->
-<!--             android:layout_height="wrap_content" -->
-<!--             android:paddingRight="30dp" -->
-<!--             android:text="End Date" /> -->
+    <!-- <TextView -->
+    <!-- android:id="@+id/tvStartDate" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:paddingRight="30dp" -->
+    <!-- android:text="Start Date" /> -->
 
-<!--         <DatePicker -->
-<!--             android:id="@+id/dpEndDate" -->
-<!--             android:layout_width="wrap_content" -->
-<!--             android:layout_height="wrap_content" /> -->
 
-<!--     </TableRow> -->
-    
+    <!-- <DatePicker -->
+    <!-- android:id="@+id/dpStartDate" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" /> -->
+
+
+    <!-- </TableRow> -->
+
+
+    <!-- <TableRow -->
+    <!-- android:id="@+id/tableRow4" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:paddingBottom="10dp" -->
+    <!-- android:paddingLeft="10dp" -->
+    <!-- android:paddingRight="20dp" -->
+    <!-- android:paddingTop="20dp" > -->
+
+
+    <!-- <TextView -->
+    <!-- android:id="@+id/tvEndDate" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:paddingRight="30dp" -->
+    <!-- android:text="End Date" /> -->
+
+
+    <!-- <DatePicker -->
+    <!-- android:id="@+id/dpEndDate" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" /> -->
+
+
+    <!-- </TableRow> -->
+
     <TableRow
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
@@ -113,6 +118,7 @@
             android:id="@+id/btnAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onAddCourse"
             android:text="Add" />
 
         <Button
@@ -121,8 +127,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
+            android:onClick="onCancel"
             android:text="Cancel" />
-
     </TableRow>
 
 </TableLayout>
