--- a/MainActivity/res/layout/activity_main.xml
+++ b/MainActivity/res/layout/activity_main.xml
@@ -5,11 +5,21 @@
     tools:context=".MainActivity" >
 
     <Button
+        android:id="@+id/buttonPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btnCourses"
+        android:layout_marginTop="34dp"
+        android:text="Button" />
+
+    <Button
         android:id="@+id/btnCourses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="17dp"
         android:text="Courses" />
 
 </RelativeLayout>
