--- a/MainActivity/res/layout/course_view.xml
+++ b/MainActivity/res/layout/course_view.xml
@@ -34,37 +34,28 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
     </TableRow>
-    
-     <TableRow
-             android:id="@+id/tableRow2"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content" >
-             
-                 <TextView
-                     android:id="@+id/textView1"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:paddingLeft="20dp"
-                     android:paddingRight="80dp"
-                     android:text="Assignments"
-                     android:textAppearance="?android:attr/textAppearanceMedium" />
-     
-                 
-                 
-        <!--  <Button
-             android:id="@+id/btnAddAssignment"
-             android:layout_width="180dp"
-             android:layout_height="wrap_content"
-             android:text="Add Assignment" /> -->
 
-                 <ImageButton
-                     android:id="@+id/imageButtonAddAssignment"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:src="@android:drawable/ic_input_add" />
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-         </TableRow>
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="80dp"
+            android:text="Assignments"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <ImageButton
+            android:id="@+id/imageButtonAddAssignment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onAddAssignment"
+            android:src="@android:drawable/ic_input_add" />
+    </TableRow>
 
     <ListView
         android:id="@+id/listViewAssignments"
@@ -73,7 +64,6 @@
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingTop="10dp" >
-
     </ListView>
 
 </LinearLayout>
