--- a/MainActivity/res/layout/display_course_list.xml
+++ b/MainActivity/res/layout/display_course_list.xml
@@ -3,33 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-   
- 
- 
 
-         <TableRow
-             android:id="@+id/tableRow1"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:paddingTop="10dp" >
-             
-                 <TextView
-                     android:id="@+id/tvCourse"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:paddingLeft="20dp"
-                     android:paddingRight="100dp"
-                     android:paddingTop="10dp"
-                     android:text="Courses"
-                     android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp" >
 
-                 <ImageButton
-                     android:id="@+id/imageButtonAddCourse"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:src="@android:drawable/ic_input_add" />
+        <TextView
+            android:id="@+id/tvCourse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="100dp"
+            android:paddingTop="10dp"
+            android:text="Courses"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-         </TableRow>
+        <ImageButton
+            android:id="@+id/imageButtonAddCourse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onAddCourse"
+            android:src="@android:drawable/ic_input_add" />
+    </TableRow>
 
     <ListView
         android:id="@+id/listViewCourses"
@@ -37,8 +34,6 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="30dp" >
-
     </ListView>
-    
 
 </LinearLayout>
